--- a/UI/PlannerMob/PlannerMob/AppShell.xaml
+++ b/UI/PlannerMob/PlannerMob/AppShell.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:pages="clr-namespace:PlannerMob.Pages"
        Title="PlannerMob"
        x:Class="PlannerMob.AppShell">
 
@@ -60,7 +61,13 @@
         </ResourceDictionary>
     </Shell.Resources>
 
-    <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle">
+    <FlyoutItem Route="homePage">
+        <Tab>
+            <ShellContent ContentTemplate="{DataTemplate pages:HomePage}" />
+        </Tab>
+    </FlyoutItem>
+
+    <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="MenuItem_Clicked" >
     </MenuItem>
 
 </Shell>
