--- a/UI/PlannerMob/PlannerMob/App.xaml
+++ b/UI/PlannerMob/PlannerMob/App.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:valueConverters="clr-namespace:PlannerMob.ValueConverters"
              x:Class="PlannerMob.App">
     <!--
         Define global resources and styles here, that apply to all pages in your app.
@@ -27,6 +28,7 @@
                     </VisualStateGroupList>
                 </Setter>
             </Style>
-        </ResourceDictionary>        
+        <valueConverters:InverseBoolConverter x:Key="InverseBoolConverter" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
