added registration text color

--- a/UI/PlannerMob/PlannerMob/Pages/RegistrationPage.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/RegistrationPage.xaml
@@ -28,7 +28,7 @@
                     <Label Text="Registracija" 
                            Padding="12"
                            BackgroundColor="{Binding BckSignUpColor}"
-                           TextColor="White"
+                           TextColor="{Binding RegTextColor}"
                            FontSize="Body">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding SwitchMode}" 
