Dodate klase, i binding. Binding popraviti

--- a/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
@@ -1,18 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:PlannerMob.Pages"
              x:Class="PlannerMob.Pages.HomePage">
+    <ContentPage.BindingContext>
+        <local:HomePage></local:HomePage>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
+        
         <StackLayout>
-            <Button Text="Ovo je neki tekst"/>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Welcome to Xamarin.Forms!"
-                   VerticalOptions="CenterAndExpand" 
-                   HorizontalOptions="CenterAndExpand" />
-            </StackLayout>
-
-            <Button Text="Dodato dugme" Clicked="Button_Clicked"    />
-
 
             <StackLayout Margin="10">
                 <Label Text="Izaberite datume trajanja konferencije"
@@ -50,8 +46,9 @@
 
             </StackLayout>
 
-           
-
+            <StackLayout Spacing="20" Padding="15">
+                <Picker ItemDisplayBinding="{Binding CourseName}" x:Name="CourseEntry" Title="Izaberite predmet" ItemsSource="{Binding Courses}"></Picker>
+            </StackLayout>
 
         </StackLayout>
     </ContentPage.Content>
