Izmenjena stranica AddCSV, mala izmena u meniju, dodane nove ikonice

--- a/UI/PlannerMob/PlannerMob/App.xaml
+++ b/UI/PlannerMob/PlannerMob/App.xaml
@@ -8,7 +8,8 @@
     -->
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#2196F3</Color>
+            <Color x:Key="Primary">#217c7b</Color>
+            <Color x:Key="DarkBlueShellHeader">#06366c</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
