--- a/UI/PlannerMob/PlannerMob/Pages/AddCSV.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/AddCSV.xaml
@@ -1,17 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModel="clr-namespace:PlannerMob.ViewModels"
              x:Class="PlannerMob.Pages.AddCSV">
+
+    <ContentPage.BindingContext>
+        <viewModel:CsvPageViewModel x:Name="viewModel"/>
+    </ContentPage.BindingContext>
+    
     <ContentPage.Content>
         <StackLayout>
             <Label Text="ADD CSV!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
 
-
-            <Button Text="Dodaj CSV dadoteku" 
-                            CornerRadius="10"
-                            Margin="0,16,0,0"/>
+            <Image Source="ic_add_file.png"
+                   HorizontalOptions="End"
+                   VerticalOptions="End">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding UploadCSVFileCommand}" />
+                </Image.GestureRecognizers>
+            </Image>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
