--- a/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
@@ -1,50 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:PlannerMob.ViewModels"
              x:Class="PlannerMob.Pages.HomePage">
- 
+
+    <ContentPage.BindingContext>
+        <viewModels:HomePageViewModel x:Name="viewModel"/>
+    </ContentPage.BindingContext>
+
     <ContentPage.Content>
         
         <StackLayout>
 
             <StackLayout Margin="10">
                 <Label Text="Izaberite datume trajanja konferencije"
-               Style="{DynamicResource TitleStyle}"
-               Margin="0, 20"
-               HorizontalTextAlignment="Center" />
+                       Style="{DynamicResource TitleStyle}"
+                       Margin="0, 20"
+                       HorizontalTextAlignment="Center" />
 
                 <Label Text="Datum pocetka konferencije:" />
 
-                <DatePicker x:Name="startDatePicker"
-                    Format="D"
-                    Margin="30, 0, 0, 30"
-                    DateSelected="OnDateSelected" />
+                <DatePicker Format="D"
+                            Margin="30, 0, 0, 30"
+                            Date="{Binding SelectedStartDate}"/>
 
                 <Label Text="Datum kraja konferencije:" />
 
-                <DatePicker x:Name="endDatePicker"
-                    MinimumDate="{Binding Source={x:Reference startDatePicker},
-                                          Path=Date}"
-                    Format="D"
-                    Margin="30, 0, 0, 30"
-                    DateSelected="OnDateSelected" />
+                <DatePicker Date="{Binding SelectedEndDate}"
+                            MinimumDate="{Binding SelectedStartDate}"
+                            Format="D"
+                            Margin="30, 0, 0, 30"/>
 
                 <StackLayout Orientation="Horizontal"
-                     Margin="0, 0, 0, 30">
+                             Margin="0, 0, 0, 30">
                     <Label Text="Oba datuma su ukljucena: "
-                   VerticalOptions="Center" />
-                    <Switch x:Name="includeSwitch"
-                    Toggled="OnSwitchToggled" />
+                           VerticalOptions="Center" />
+                    <Switch IsToggled="{Binding IsBothDatesEnabled}"/>
                 </StackLayout>
 
-                <Label x:Name="resultLabel"
-               FontAttributes="Bold"
-               HorizontalTextAlignment="Center" />
+                <Label Text="{Binding LabelCaptionText}"
+                       FontAttributes="Bold"
+                       HorizontalTextAlignment="Center" />
 
             </StackLayout>
             <StackLayout>
 
-                <Picker x:Name="MainPicker"/>
+                <Picker Title="{Binding PickerTitle}"
+                        ItemsSource="{Binding Courses}"/>
 
             </StackLayout>
 
