--- a/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
@@ -18,9 +18,13 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            <Image Source="{Binding ImageUrl}"
-                                   WidthRequest="90" HeightRequest="90"
-                                   Grid.Column="0"/>
+                        <Image WidthRequest="90" HeightRequest="90"
+                                   Grid.Column="0">
+                            <Image.Source>
+                                <UriImageSource CacheValidity="2" CachingEnabled="True" Uri="{Binding ImageUrl}">
+                                </UriImageSource>
+                            </Image.Source>
+                        </Image>
 
                             <StackLayout Orientation="Vertical" Grid.Column="1" VerticalOptions="CenterAndExpand">
                                 <Label Text="{Binding Name}" FontSize="Body"/>
