--- a/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:PlannerMob.ViewModels"
+             xmlns:models="clr-namespace:PlannerMob.Entities.Mettings"
              x:Class="PlannerMob.Pages.HomePage">
 
     <ContentPage.BindingContext>
@@ -43,16 +44,46 @@
                        HorizontalTextAlignment="Center" />
 
             </StackLayout>
+            
+            <Button Text="Prikaži sastanke u izabranom periodu"
+                    Command="{Binding ShowMeetings}"/>
 
-
+            <CollectionView ItemsSource="{Binding Meetings}"
+                            >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Meeting">
+                        <ContentView>
+                            <Frame>
+                                <Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto, Auto">
+                                    <Label Text="Naziv sastanka"
+                                           Grid.Row="0"
+                                           Grid.Column="1" />
+                                    <Label Text="Broj učesnika"
+                                           Grid.Row="0"
+                                           Grid.Column="2" />
+                                    <Label Text="{Binding Name}"
+                                           HorizontalOptions="FillAndExpand"
+                                           Grid.Row="1"
+                                           Grid.Column="1"/>
+                                    <Label Text="{Binding AtendeeCount}" 
+                                           HorizontalOptions="FillAndExpand"
+                                           Grid.Row="1"
+                                           Grid.Column="2"/>
+                                    <Button Text="Prikaži učesnike" 
+                                            Grid.Row="0"
+                                            Grid.Column="3" />
+                                </Grid>
+                            </Frame>
+                        </ContentView>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            
             <StackLayout>
-
-   
-
                 <Button Text="Demo za ucesnike!"
-                VerticalOptions="CenterAndExpand"
-                HorizontalOptions="Center"
-                Clicked="Button_Clicked"/>
+                        VerticalOptions="CenterAndExpand"
+                        HorizontalOptions="Center"
+                        Clicked="Button_Clicked"/>
 
             </StackLayout>
 
