--- a/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/HomePage.xaml
@@ -48,30 +48,40 @@
             <Button Text="Prikaži sastanke u izabranom periodu"
                     Command="{Binding ShowMeetings}"/>
 
-            <CollectionView ItemsSource="{Binding Meetings}"
-                            >
+            <Label Text="MEETINGS" 
+                   FontSize="Large"
+                   TextColor="White"
+                   HorizontalOptions="CenterAndExpand"
+                   Margin="0,24,0,0"/>
+            <CollectionView ItemsSource="{Binding SelectedMeetings}"
+                            HorizontalOptions="FillAndExpand">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:Meeting">
                         <ContentView>
                             <Frame>
-                                <Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto, Auto">
+                                <Grid ColumnDefinitions="Auto,Auto,Auto" RowDefinitions="Auto, Auto">
                                     <Label Text="Naziv sastanka"
                                            Grid.Row="0"
-                                           Grid.Column="1" />
+                                           Grid.Column="1" 
+                                           TextColor="White"/>
                                     <Label Text="Broj učesnika"
                                            Grid.Row="0"
-                                           Grid.Column="2" />
+                                           Grid.Column="2" 
+                                           TextColor="White"/>
                                     <Label Text="{Binding Name}"
                                            HorizontalOptions="FillAndExpand"
                                            Grid.Row="1"
-                                           Grid.Column="1"/>
+                                           Grid.Column="1"
+                                           TextColor="White"/>
                                     <Label Text="{Binding AtendeeCount}" 
                                            HorizontalOptions="FillAndExpand"
                                            Grid.Row="1"
-                                           Grid.Column="2"/>
+                                           Grid.Column="2"
+                                           TextColor="White"/>
                                     <Button Text="Prikaži učesnike" 
                                             Grid.Row="0"
-                                            Grid.Column="3" />
+                                            Grid.Column="3" 
+                                            Clicked="Button_Clicked_1"  />
                                 </Grid>
                             </Frame>
                         </ContentView>
@@ -79,13 +89,13 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
             
-            <StackLayout>
+            <!--<StackLayout>
                 <Button Text="Demo za ucesnike!"
                         VerticalOptions="CenterAndExpand"
                         HorizontalOptions="Center"
                         Clicked="Button_Clicked"/>
 
-            </StackLayout>
+            </StackLayout>-->
 
         </StackLayout>
     </ContentPage.Content>
