--- a/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:PlannerMob.ViewModels"
+             xmlns:models="clr-namespace:PlannerMob.Entities"
              x:Class="PlannerMob.Pages.AttendeeView"
              Title="Lista ucesnika">
     <ContentPage.BindingContext>
@@ -9,39 +10,70 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
 
-        <CollectionView ItemsSource="{Binding Attendees}">
+        <StackLayout>
+            <Label Text="SPISAK UČESNIKA ZA ODABRANI MEETING"
+               TextColor="White"
+               FontSize="Large"
+                   HorizontalOptions="CenterAndExpand"
+                   HorizontalTextAlignment="Center"
+                   Margin="0,24,0,12"/>
+            <CollectionView ItemsSource="{Binding Attendees}"
+                        HorizontalOptions="FillAndExpand"
+                        >
                 <CollectionView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="models:Attendee">
                         <Grid Margin="0,12,0,0">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
 
-                        <Image WidthRequest="90" HeightRequest="90"
-                                   Grid.Column="0">
-                            <Image.Source>
-                                <UriImageSource CacheValidity="2" CachingEnabled="True" Uri="{Binding ImageUrl}">
-                                </UriImageSource>
-                            </Image.Source>
-                        </Image>
-
                             <StackLayout Orientation="Vertical" Grid.Column="1" VerticalOptions="CenterAndExpand">
-                                <Label Text="{Binding Name}" FontSize="Body"/>
-                                <Label Text="{Binding Surname}" FontSize="Body"/>
+                                <Label>
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <FormattedString.Spans>
+                                                <Span Text="Korisničko ime: " FontSize="Body" TextColor="White" />
+                                                <Span Text="{Binding Username}" TextColor="White" FontSize="Body" />
+                                            </FormattedString.Spans>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
                             </StackLayout>
-                            
+
                             <StackLayout Orientation="Vertical" Grid.Column="2" VerticalOptions="CenterAndExpand">
-                                <Label Text="{Binding Action}" FontSize="Body"/>
+                                <Label>
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <FormattedString.Spans>
+                                                <Span Text="Ukupno vreme prisustva: " FontSize="Body" TextColor="White" />
+                                                <Span Text="{Binding TotalTime}" TextColor="White" FontSize="Body" />
+                                            </FormattedString.Spans>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
                             </StackLayout>
-                            
+
                             <StackLayout Orientation="Vertical" Grid.Column="3" VerticalOptions="CenterAndExpand">
-                                <Label Text="{Binding TimeStamp}" FontSize="Body"/>
+                                <Label>
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <FormattedString.Spans>
+                                                <Span Text="Procenat prisutnosti: " FontSize="Body" TextColor="White" />
+                                                <Span Text="{Binding Percentage}" TextColor="White" FontSize="Body" />
+                                            </FormattedString.Spans>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
                             </StackLayout>
+
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding ClickCommand, Source={x:Reference viewModel}}" />
+                            </Grid.GestureRecognizers>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
+        </StackLayout>
 
     </ContentPage.Content>
 </ContentPage>
