--- a/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
+++ b/UI/PlannerMob/PlannerMob/Pages/AttendeeView.xaml
@@ -17,54 +17,37 @@
                    HorizontalOptions="CenterAndExpand"
                    HorizontalTextAlignment="Center"
                    Margin="0,24,0,12"/>
+
+            <Grid ColumnDefinitions="*,*,*" RowDefinitions="Auto" Margin="18">
+                <Label Text="Korisničko ime"
+                       FontSize="Body"
+                       TextColor="White"
+                       Grid.Column="0"
+                       HorizontalOptions="CenterAndExpand"/>
+                <Label Text="Ukupno vreme prisustva"
+                       FontSize="Body"
+                       TextColor="White"
+                       Grid.Column="1"
+                       HorizontalOptions="CenterAndExpand"
+                       HorizontalTextAlignment="Center"/>
+                <Label Text="Procenat prisutnosti"
+                       FontSize="Body"
+                       TextColor="White"
+                       Grid.Column="2"
+                       HorizontalOptions="CenterAndExpand"
+                       HorizontalTextAlignment="Center"/>
+            </Grid>
+            
             <CollectionView ItemsSource="{Binding Attendees}"
-                        HorizontalOptions="FillAndExpand"
-                        >
+                            HorizontalOptions="FillAndExpand" 
+                            Margin="18">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:Attendee">
-                        <Grid Margin="0,12,0,0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
+                        <Grid Margin="0,12,0,0" ColumnDefinitions="*,*,*">
 
-                            <StackLayout Orientation="Vertical" Grid.Column="1" VerticalOptions="CenterAndExpand">
-                                <Label>
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <FormattedString.Spans>
-                                                <Span Text="Korisničko ime: " FontSize="Body" TextColor="White" />
-                                                <Span Text="{Binding Username}" TextColor="White" FontSize="Body" />
-                                            </FormattedString.Spans>
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
-                            </StackLayout>
-
-                            <StackLayout Orientation="Vertical" Grid.Column="2" VerticalOptions="CenterAndExpand">
-                                <Label>
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <FormattedString.Spans>
-                                                <Span Text="Ukupno vreme prisustva: " FontSize="Body" TextColor="White" />
-                                                <Span Text="{Binding TotalTime}" TextColor="White" FontSize="Body" />
-                                            </FormattedString.Spans>
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
-                            </StackLayout>
-
-                            <StackLayout Orientation="Vertical" Grid.Column="3" VerticalOptions="CenterAndExpand">
-                                <Label>
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <FormattedString.Spans>
-                                                <Span Text="Procenat prisutnosti: " FontSize="Body" TextColor="White" />
-                                                <Span Text="{Binding Percentage}" TextColor="White" FontSize="Body" />
-                                            </FormattedString.Spans>
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
-                            </StackLayout>
+                            <Label Text="{Binding Username}" TextColor="White" FontSize="Body" Grid.Column="0" />
+                            <Label Text="{Binding TotalTime}" TextColor="White" FontSize="Body" Grid.Column="1" HorizontalOptions="End"/>
+                            <Label Text="{Binding Percentage}" TextColor="White" FontSize="Body" Grid.Column="2" HorizontalOptions="End"/>
 
                             <Grid.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding ClickCommand, Source={x:Reference viewModel}}" />
